@@ -44,9 +44,12 @@ DeclareGlobalFunction( "IO_MakeIPAddressPort" );
 DeclareGlobalFunction( "IO_Environment" );
 DeclareGlobalFunction( "IO_MakeEnvList" );
 DeclareGlobalFunction( "IO_CloseAllFDs" );
+DeclareGlobalFunction( "IO_ForkExecWithFDs" );
 DeclareGlobalFunction( "IO_Popen" );
 DeclareGlobalFunction( "IO_Popen2" );
 DeclareGlobalFunction( "IO_Popen3" );
+DeclareGlobalFunction( "IO_StartPipeline" );
+DeclareGlobalFunction( "IO_StringFilterFile" );
 DeclareGlobalFunction( "IO_SendStringBackground" );
 DeclareGlobalFunction( "IO_PipeThroughWithError" );
 DeclareGlobalFunction( "IO_PipeThrough" );
