@@ -21,6 +21,11 @@
   - Improved installation instructions in the manual and the README file.
   - Add proper preface to the manual
   - Released revision 216 as 2.0
+  - Fix documentation of Popen*
+  - Clean up code for Popen, create IO_ForkExecWithFDs
+  - IO_StartPipeline
+  - IO_StringFilterFile, IO_FileFilterString
+
 
 
 ==========================
